--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ repositories {
 
 dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
+    compile 'org.apache.httpcomponents:httpclient:4.4-alpha1'
+    compile "org.apache.httpcomponents:httpmime:4.2.3"
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
